[gd_scene load_steps=10 format=4 uid="uid://ccvounnbl351a"]

[ext_resource type="Texture2D" uid="uid://dwlp40mbjusfi" path="res://Sprites/Environment/staget.png" id="1_0apk2"]
[ext_resource type="Script" uid="uid://dlsrwutftqc5i" path="res://Scripts/gather_point.gd" id="1_rapfc"]
[ext_resource type="Texture2D" uid="uid://dhq7ddggspinf" path="res://Sprites/spawner/princesses/prorotypeprincess.png" id="2_rapfc"]
[ext_resource type="Script" uid="uid://76r23ut578hf" path="res://Scripts/time_to_clear.gd" id="4_hjumk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hjumk"]
texture = ExtResource("1_0apk2")
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_qo4nb"]
sources/0 = SubResource("TileSetAtlasSource_hjumk")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2govv"]
size = Vector2(64, 60)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rapfc"]
radius = 138.667
height = 426.667

[sub_resource type="LabelSettings" id="LabelSettings_qo4nb"]
font_size = 32

[node name="GatherPoint" type="Node2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_rapfc")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAABAAIAAAAAAAEAAAAAAAIAAAAAAAEAAAD//wIAAAAAAAEAAAD+/wIAAAAAAAEAAAD+/wAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_qo4nb")

[node name="spawner_princess" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_rapfc")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 18)
shape = SubResource("RectangleShape2D_2govv")

[node name="CheckForPlayerArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckForPlayerArea2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rapfc")
debug_color = Color(0.827451, 0.396078, 0, 0.0784314)

[node name="TimeToClear" type="Label" parent="CheckForPlayerArea2D"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.6667
offset_top = -64.0
offset_right = 39.3333
offset_bottom = -19.0
grow_horizontal = 2
text = "100"
label_settings = SubResource("LabelSettings_qo4nb")
horizontal_alignment = 1
script = ExtResource("4_hjumk")

[node name="TimerToClearTimer" type="Timer" parent="CheckForPlayerArea2D/TimeToClear"]
wait_time = 50.0

[connection signal="enemies_defeated" from="." to="." method="_on_enemies_defeated"]
[connection signal="body_entered" from="CheckForPlayerArea2D" to="CheckForPlayerArea2D/TimeToClear" method="_on_check_for_player_area_2d_body_entered"]
